--- a/docs/content/docs/index.mdx
+++ b/docs/content/docs/index.mdx
@@ -1,13 +1,39 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: Self-contained analytics SDK that runs entirely on your infrastructure
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+# Locallytics
 
-## What is Next?
+**"Analytics that live with your app."**
+
+Self-contained analytics SDK that runs entirely on your infrastructure – no external servers, no tracking scripts, no cost.
+
+## Overview
+
+Locallytics is a privacy-first analytics solution where developers drop in an `<AnalyticsGrabber />` component to collect data and use `AnalyticsJSON()` to fetch metrics, all powered by their own database and hosting.
+
+## Key Features
+
+- **Zero external dependencies** – data stays local on your infrastructure
+- **One-line setup** using React components
+- **Pageview + custom event tracking**
+- **Works with any backend** (Vercel, Cloudflare, Supabase, Postgres, SQLite, etc.)
+- **Privacy-compliant** and free forever
+- **TypeScript-first** with full type safety
+- **Kysely-based** database adapter with support for Postgres and SQLite
+
+## Differentiators
+
+- Competes with Plausible, Fathom, and PostHog
+- "Better Auth for analytics" – everything runs in your app
+- Open-source SDK
+- Developer-first DX with TypeScript and modern tooling
+
+## Get Started
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
+  <Card title="Installation" href="/docs/installation" />
+  <Card title="Quick Start" href="/docs/quick-start" />
+  <Card title="API Reference" href="/docs/api-reference" />
 </Cards>
