--- a/web/content/docs/index.mdx
+++ b/web/content/docs/index.mdx
@@ -1,13 +1,28 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: Self-contained analytics that runs entirely on your infrastructure
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+## What is Locallytics?
 
-## What is Next?
+Locallytics is a privacy-first analytics SDK that runs entirely on your infrastructure – no external servers, no tracking scripts, no cost.
+
+Drop in an `<AnalyticsGrabber />` component to collect data and use `AnalyticsJSON()` to fetch metrics, all powered by your own database and hosting.
+
+## Why Locallytics?
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
+  <Card title="Lightweight" description="No external dependencies" />
+  <Card title="Simple" description="Easy to set up and use" />
+  <Card title="Fast" description="Event batching with reliable delivery" />
+  <Card title="Secure" description="Do Not Track (DNT) support" />
+  <Card title="Flexible" description="Supports PostgreSQL and SQLite" />
+  <Card title="Private" description="No cookies, runs on your infrastructure" />
+</Cards>
+
+## Get Started
+
+<Cards>
+  <Card title="Quick Start" href="/docs/quick-start" />
+  <Card title="API Reference" href="/docs/api-reference" />
 </Cards>
