--- a/web/content/docs/quick-start.mdx
+++ b/web/content/docs/quick-start.mdx
@@ -41,10 +41,10 @@ Generate and run the database schema:
 
 ```bash
 # Generate schema (creates ./locallytics/schema.sql)
-npx locallytics generate
+npx @locallytics/cli generate
 
 # Run migrations
-npx locallytics migrate
+npx @locallytics/cli migrate
 ```
 
 ## 4. Add the Analytics Grabber
